--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="sidebar">
         <div class="sidebar-header">
             <span class="logo-icon">🛡️</span>
-            <h1>İKH Kaşifi</h1>
+            <h1>İKH ile Blok Zincir Deneyi</h1>
         </div>
         <ul class="nav-links">
             <li class="active" data-module="hashing">
