Integrate school emblem and custom color scheme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav class="sidebar">
         <div class="sidebar-header">
-            <span class="logo-icon">🛡️</span>
+            <img src="image.png" alt="Logo" class="logo-img">
             <h1>İKH ile Blok Zincir</h1>
         </div>
         <ul class="nav-links">
