Sync hashing formula with 1-based indexing (i=index+1)

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
                 <table id="steps-table">
                     <thead>
                         <tr>
+                            <th>Konum (i)</th>
                             <th>Karakter</th>
                             <th>Kod</th>
-                            <th>&pi; Basamağı</th>
-                            <th>e Basamağı</th>
-                            <th>&phi; Basamağı</th>
+                            <th>π_i</th>
+                            <th>e_i</th>
+                            <th>φ_i</th>
                             <th>Hesaplama</th>
-                            <th>Mod 257</th>
+                            <th>Geçici Değer</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
